fix: scrollbars

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,5 +1,5 @@
 .page {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   padding: 40px;
   display: grid;
@@ -15,6 +15,7 @@
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
+  overflow: hidden;
 }
 
 .header,
